--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,49 @@ img, video, audio, iframe, table, form {
 }
 
 /*/////// LAYOUT STYLES ////////*/
-
-
 .row{
     margin-bottom: 20px;
+}
+
+/*/////// Carousel styles ////////*/
+
+#carousel-example-generic .item img{
+  height: auto;
+
+}
+
+.carousel-caption p{
+  display: none;
+}
+
+/*small devices*/
+@media only screen and (min-width: 768px){
+  #carousel-example-generic .item img{
+    height: 384px;
+  }
+}
+
+/*medium size devices*/
+@media only screen and (min-width: 992px){
+#carousel-example-generic .item img{
+  height: 496px;
+
+}
+
+.carousel-caption p{
+  display: block;
+}
+}
+
+/*large size devices*/
+@media only screen and (min-width: 1200px){
+
+#carousel-example-generic .item img{
+  height: 600px;
+
+}
+
+.carousel-caption p{
+  display: block;
+}
 }
